--- a/index.html
+++ b/index.html
@@ -1,13 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KPML</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <script src="js/main.js"></script>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 </head>
+
 <body>
-    
+    <header class="p-3 mb-3 pt-0">
+        <div class=".container-fluid bg-white p-3 rounded-bottom-4 shadow-lg">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-decoration-none">
+                    <img src="./imgs/kpml-logo.svg" alt="">
+                </a>
+
+                <ul class="nav col-12 col-lg-auto ms-lg-auto mb-2 justify-content-center mb-md-0 text-menu">
+                    <li>
+                        <a href="#" class="nav-link px-4 text-primary link-danger">Về chúng tôi</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav-link px-4 text-primary link-danger">Tin tức</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav-link px-4 text-primary link-danger">Cửa hàng</a>
+                    </li>
+                </ul>
+
+               <a href="/" class="d-flex align-items-center ms-4 ">
+                    <img src="./imgs/search.svg" alt="" width="24" height="24">
+                </a>                
+
+
+             
+
+            </div>
+        </div>
+    </header>
+
+    <section class="home-topic">
+        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+            <div class="col">
+                <img src="./imgs/kpml-logo.svg" alt="" class="">
+            </div>
+        </div>
+    </section>
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
