--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <body>
     <header class="p-3 mb-3 pt-0">
-        <div class=".container-fluid bg-white p-3 rounded-bottom-4 shadow-lg">
+        <div class="container-fluid bg-white p-3 rounded-bottom-4 shadow-lg">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-decoration-none">
-                    <img src="./imgs/kpml-logo.svg" alt="">
+                    <img src="./imgs/kpml-logo.svg" alt="" />
                 </a>
 
                 <ul class="nav col-12 col-lg-auto ms-lg-auto mb-2 justify-content-center mb-md-0 text-menu">
@@ -32,24 +32,65 @@
                     </li>
                 </ul>
 
-               <a href="/" class="d-flex align-items-center ms-4 ">
-                    <img src="./imgs/search.svg" alt="" width="24" height="24">
-                </a>                
-
-
-             
-
+                <a href="/" class="d-flex align-items-center ms-4">
+                    <img src="./imgs/search.svg" alt="" width="24" height="24" />
+                </a>
             </div>
         </div>
     </header>
 
-    <section class="home-topic">
-        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-            <div class="col">
-                <img src="./imgs/kpml-logo.svg" alt="" class="">
+    <section class="home-topic container-fluid">
+        <div class="row row-cols-1 row-cols-md-3">
+            <div class="feature col p-3 mx-auto d-flex justify-content-center">
+                <a href="#" class="icon-link w-50">
+                    <img src="./imgs/topic-1.svg" alt="" class="topic-img" />
+                </a>
+            </div>
+            <div class="feature col p-3 mx-auto d-flex justify-content-center">
+                <a href="#" class="icon-link w-50">
+                    <img src="./imgs/topic-2.svg" alt="" class="topic-img" />
+                </a>
+            </div>
+            <div class="feature col p-3 mx-auto d-flex justify-content-center">
+                <a href="#" class="icon-link w-50">
+                    <img src="./imgs/topic-3.svg" alt="" class="topic-img" />
+                </a>
+            </div>
+            <div class="feature col p-3 mx-auto d-flex justify-content-center">
+                <a href="#" class="icon-link w-50">
+                    <img src="./imgs/topic-4.svg" alt="" class="topic-img" />
+                </a>
+            </div>
+            <div class="feature col p-3 mx-auto d-flex justify-content-center">
+                <a href="#" class="icon-link w-50">
+                    <img src="./imgs/topic-5.svg" alt="" class="topic-img" />
+                </a>
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="footer-bg">
+            <img src="./imgs/city.svg" alt="" />
+        </div>
+        <div class="container-fluid footer-bg--city pb-5">
+            <div class="bg-secondary p-3 rounded-4">
+                <div class="footer-title text-white pb-4">
+                    KHAM PHA MUON LOAI / EXCLUSIVELY BASED IN VIETNAM
+                </div>
+                <div
+                    class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start border-top-white border-top border-white pt-4">
+                    <a href="/" class="d-flex align-items-center mb-lg-0 text-decoration-none">
+                        <img src="./imgs/kpml-logo-white.svg" alt="" />
+                    </a>
+                    <div class="col-12 col-lg-auto ms-lg-auto text-white">
+                        Copyright © 2001-2024 Kham Pha Muon Loai | Copyright © 2001-2024
+                        Student Project, NG. All rights reserved
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
